<resources>
    <string name="app_name">Amaze</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ullamcorper</string>

    <!-- Bottom Navigation View -->
    <string name="nav_home_text">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_account">Profile</string>

    <string name="nav_add_event">Add Event</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty_basket_text">Empty Basket</string>
    <string name="add_article_button_text">Add an article</string>
    <string name="propose_choose_article_text">Choose un article in  the Menu</string>
    <string name="total_order_text">Total de la commande</string>
    <string name="toolbar_create_event_button_text">Create Event</string>
    <string name="hosted_by_text">Hosted By</string>
    <string name="event_card_join_button_text">Join</string>
    <string name="event_card_not_interessed_button_text">Not interessed</string>

    <!-- Password Strength progresses -->
    <string name="password_strength_weak">Weak</string>
    <string name="password_strength_medium">Medium</string>
    <string name="password_strength_strong">Strong</string>
    <string name="password_strength_very_strong">Very Strong</string>
    <string name="password_dont_match">Passwords doesn\'t match</string>
    <string name="event_title_label">Event Title</string>
    <string name="title_placeholder">Title</string>
    <string name="event_location_label">Where</string>
    <string name="location_placeholder">Pick a location</string>
    <string name="date_placeholder">Pick a date</string>
    <string name="event_date_label">When</string>
    <string name="event_price_label">Price</string>
    <string name="price_placeholder">Set a price</string>

    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone number</string>
    <string name="diet_information">Diet information</string>
    <string name="log_out">Log out</string>
    <string name="profile_edit">Edit</string>
    <string name="info">Info</string>
    <string name="disponibilities">Dispo</string>
    <string name="payments">Payments</string>
    <string name="settings">Settings</string>
    <string name="textfield_disponibilities">Disponibilities</string>
    <string name="customize_disponibilities">Customize your experience by choosing when you are generally available</string>
    <string name="pick_no_dispo">Pick a specific date you can\'t attend</string>
    <string name="add_no_dispo">add</string>
    <string name="available_weekend">When are you generally available on weekend ?</string>
    <string name="available_weekdays">When are you generally available on weekdays ?</string>
    <string name="morning">Morning</string>
    <string name="midday">Midday</string>
    <string name="evening">Evening</string>
    <string name="night">Night</string>
    <string name="latenight">Latenight</string>
    <string name="profileTextView">Profile</string>
    <string name="profilePictureDescription">profilePictureDescription</string>
    <string name="action_settings">Profil</string>
    <string name="description">Description</string>
    <string name="event_creation_description_hint">Is there anything else your friends needs to know about the event</string>
    <string name="people_to_invite_text">People to invite</string>
    <string name="friend_search_hint_text">Type friend\'s name</string>
    <string name="search_friend_button_text">Search friends</string>
    <string name="next_text">Next</string>
    <string name="free_text">Free</string>
    <string name="guests">Guests</string>
    <string name="add_a_note">Add a note</string>
    <string name="send">Send</string>
    <string name="invited">Invited</string>
    <string name="hosted">Hosted</string>
    <string name="comming_text">Yes, I\'am In</string>
    <string name="maybe_text">Maybe</string>
    <string name="not_comming_text">No</string>
    <string name="location_search_hint_text">Type place address</string>
    <string name="no_event">You have no event for the moment !! let ’s create one and enjoy memorable moments with the people you love</string>
    <string name="signup_username_helper_text">Your username is too small ! (6 chars min)</string>
    <string name="signup_firstname_helper_text">How you friends calls you ?</string>
    <string name="signup_lastname_helper_text">What\'s your name My Lord ?</string>
    <string name="signup_email_helper_text">This format of email is invalid</string>
    <string name="signup_repeat_password_helper_text">Both password doesn\'t match</string>
    <string name="new_account_suggestion_text"><![CDATA[Don’t have an account? Swipe right to create a new account ->]]></string>
    <string name="new_event_no_title_error">Event must have a title !</string>
    <string name="new_event_no_location_error">Where are going to come your guest ?</string>
    <string name="new_event_no_date_error">When are your guest supposed to come ?</string>
    <string name="new_event_no_price_error">Need some help from your guest for this birthday ?</string>
    <string name="new_event_no_description_error">Tell some words about this birthday</string>


    <string name="welcome">Welcome !</string>
    <string name="organize_title">Organize</string>
    <string name="organize_description">Use our multiple services that our application offer to organise the perfect surprise birthday</string>
    <string name="invite_title">Invite</string>
    <string name="invite_description">Once the configuration finished invite your friends through facebook</string>
    <string name="enjoy_title">Surprise &amp; enjoy</string>
    <string name="enjoy_description">Surprise the people you love and enjoy memorable moments</string>
    <string name="enjoy_image_description">An enjoy image</string>
    <string name="enjoy_button">Let\'s discover !</string>
    <string name="delete_account">Delete account</string>
    <string name="other_diet">Other</string>
    <string name="save">Save</string>
    <string name="what_time">What time ?</string>
    <string name="hour_placeholder">Pick an hour</string>
    <string name="error_load_event">An error occured when trying to load event, try to restart Amaze</string>
    <string name="comming">Comming</string>
    <string name="not_comming">Not comming</string>
    <string name="event_created">Event created !</string>
    <string name="event_successfully_created_image_description">The event successfully created image description</string>
    <string name="back_to_home">Back to home</string>
    <string name="empty_page">This feature is not available at this time.</string>
    <string name="delete_event">Delete event</string>
    <string name="close">Close</string>
    <string name="add_guests">Add guests</string>
</resources>
