<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

    <Button
            android:id="@+id/profile_back_button"
            android:layout_width="30dp"
            android:layout_height="18dp"
            android:background="@drawable/left_arrow"
            app:layout_constraintTop_toTopOf="@+id/textViewProfile"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp"
            android:layout_marginTop="4dp"/>

    <TextView
            android:id="@+id/textViewProfile"
            android:text="@string/profileTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="@android:color/white"/>

    <Button
            android:id="@+id/profile_edit_button"
            android:drawableEnd="@drawable/pencil_edit_button"
            android:text="@string/profile_edit"
            android:layout_width="52dp"
            android:layout_height="24dp"
            android:textColor="@color/colorWhite"
            android:background="@color/transparent"
            android:textAllCaps="false"
            android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewProfile"
            />

    <ImageView
            android:id="@+id/imageViewProfilePicture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:srcCompat="@mipmap/ic_launcher_round"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfile"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/profilePictureDescription"/>

    <TextView
            android:id="@+id/textViewProfileName"
            android:text="Firstname Lastname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"/>

    <android.support.design.widget.TabLayout
            android:id="@+id/profile_tabLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileName"
            app:tabTextColor="@color/colorEditTextHintColor"
            app:tabSelectedTextColor="@android:color/white">

        <android.support.design.widget.TabItem
                android:id="@+id/itemInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"/>

        <android.support.design.widget.TabItem
                android:id="@+id/itemDispo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disponibilities"/>

        <android.support.design.widget.TabItem
                android:id="@+id/itemPayments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/payments"/>

        <android.support.design.widget.TabItem
                android:id="@+id/itemSettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"/>

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:id="@+id/profile_viewPager"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_tabLayout"
            android:background="@color/colorBackground"/>
</android.support.constraint.ConstraintLayout>