<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.amaze.activities.CreateEventActivity">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/scrollView2"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/button"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="1.0"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp">

        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="40dp"
                tools:layout_editor_absoluteX="8dp"
                android:background="@drawable/custom_card"
                >

            <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/add_picture_event"
                    android:id="@+id/imageButton2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    />

            <TextView
                    android:text="@string/event_title_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView9"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/name_font_size"
                    android:textColor="@color/ColorBlackSecondary"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageButton2"
                    android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText"
                    android:hint="@string/title_placeholder"
                    android:textSize="@dimen/event_card_infos_details_font_size"
                    android:fontFamily="@font/open_sans_light"
                    app:layout_constraintTop_toBottomOf="@+id/textView9"
                    app:layout_constraintStart_toStartOf="@+id/textView9"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                    android:text="@string/event_location_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView10"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/name_font_size"
                    android:textColor="@color/ColorBlackSecondary"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText"
                    app:layout_constraintStart_toStartOf="@+id/editText"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText2"
                    android:hint="@string/location_placeholder"
                    android:textSize="@dimen/event_card_infos_details_font_size"
                    android:fontFamily="@font/open_sans_light"
                    app:layout_constraintStart_toStartOf="@+id/textView10"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="@+id/editText"/>

            <TextView
                    android:text="@string/event_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView11"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/name_font_size"
                    android:textColor="@color/ColorBlackSecondary"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText2"
                    app:layout_constraintStart_toStartOf="@+id/editText2"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/editText5"
                    android:hint="@string/date_placeholder"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="@dimen/event_card_infos_details_font_size"
                    app:layout_constraintStart_toStartOf="@+id/textView11"
                    app:layout_constraintTop_toBottomOf="@+id/textView11"
                    app:layout_constraintEnd_toEndOf="@+id/editText2"/>

            <TextView
                    android:text="@string/event_price_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView13"
                    android:fontFamily="@font/open_sans"
                    android:textSize="@dimen/name_font_size"
                    android:textColor="@color/ColorBlackSecondary"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/editText5"
                    app:layout_constraintStart_toStartOf="@+id/editText5"/>

            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText7"
                    app:layout_constraintStart_toStartOf="@+id/textView13"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    app:layout_constraintEnd_toEndOf="@+id/editText5"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/price_placeholder"
                    android:fontFamily="@font/open_sans_light"
                    android:textSize="@dimen/subtitle_font_size"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"/>
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <Button
            android:text="Next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            tools:layout_editor_absoluteY="675dp"
            tools:layout_editor_absoluteX="315dp"/>

</android.support.constraint.ConstraintLayout>
