<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Developed by Yann Malanda on 6/4/19 10:08 AM.
  ~ Last modified 6/4/19 10:08 AM
  ~ Copyright (c) 2019.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".fragments.GuestsStateFragment"
                                             android:id="@+id/frameLayout4">

    <android.support.design.widget.TabLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/guestsStateTabLayout"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/guestsStateViewPager"
            app:tabTextAppearance="@style/TextAppearance.AppCompat.Body1"
            app:tabTextColor="@color/ColorBlackSecondary">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/comming"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_comming"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maybe_text"/>
    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/guestsStateViewPager"
            app:layout_constraintTop_toBottomOf="@+id/guestsStateTabLayout"/>
</android.support.constraint.ConstraintLayout>