<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient_background"
        android:rotation="0">

    <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/john_doe"
            app:civ_border_color="#FF000000"
            android:id="@+id/imageViewProfilePicture"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"/>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewProfileName"
            app:layout_constraintTop_toBottomOf="@+id/imageViewProfilePicture"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:textColor="@android:color/white"
            tools:text="Yann Malanda"
            android:fontFamily="@font/open_sans"
            android:textSize="@dimen/big_title_font_size"/>

    <android.support.design.widget.TabLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/profile_tabLayout"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewProfileName"
            app:tabTextColor="@color/profileTabTextColor"
            app:tabSelectedTextColor="@android:color/white">

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/info"
                android:id="@+id/itemInfo"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disponibilities"
                android:id="@+id/itemDispo"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemPayments"
                android:text="@string/payments"/>

        <android.support.design.widget.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/itemSettings"
                android:text="@string/settings"/>

    </android.support.design.widget.TabLayout>

    <android.support.v4.view.ViewPager
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/profile_viewPager"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_tabLayout"
            android:background="@color/colorBackground"
            android:padding="16dp"/>
</android.support.constraint.ConstraintLayout>